@@ -1,18 +1,20 @@
 package hcmute.edu.vn.discord.controller;
 
+import hcmute.edu.vn.discord.dto.request.ChannelPermissionRequest;
 import hcmute.edu.vn.discord.dto.request.ChannelRequest;
 import hcmute.edu.vn.discord.dto.response.ChannelResponse;
-import hcmute.edu.vn.discord.entity.jpa.Channel;
 import hcmute.edu.vn.discord.service.ChannelService;
 import hcmute.edu.vn.discord.security.servers.ServerAuth;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
@@ -22,68 +24,76 @@ public class ChannelController {
     private final ChannelService channelService;
     private final ServerAuth serverAuth;
 
-    // 1. Tạo Channel (Có isPrivate)
     @PostMapping("/servers/{serverId}/channels")
     @PreAuthorize("@serverAuth.canManageChannels(#serverId, authentication.name)")
     public ResponseEntity<ChannelResponse> createChannel(
             @PathVariable Long serverId,
-            @RequestBody ChannelRequest request) {
+            @RequestBody @Valid ChannelRequest request,
+            Authentication authentication) {
 
-        Channel channel = channelService.createChannel(
+        request.normalize();
+
+        ChannelResponse created = ChannelResponse.from(channelService.createChannel(
                 serverId,
                 request.getName(),
                 request.getType(),
                 request.getCategoryId(),
-                request.getIsPrivate()
-        );
-        return ResponseEntity.ok(ChannelResponse.from(channel));
+                request.getIsPrivate(),
+                authentication.getName()
+        ));
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest()
+                .path("/{id}").buildAndExpand(created.getId()).toUri();
+        return ResponseEntity.created(location).body(created);
     }
 
-    // 2. Lấy danh sách Channel
     @GetMapping("/servers/{serverId}/channels")
     @PreAuthorize("@serverAuth.isMember(#serverId, authentication.name)")
     public ResponseEntity<List<ChannelResponse>> getChannels(
             @PathVariable Long serverId,
             Authentication authentication) {
         String username = authentication.getName();
-        List<Channel> allChannels = channelService.getChannelsByServer(serverId);
-        // Logic: Chỉ giữ lại các kênh mà user có quyền "canViewChannel"
-        List<ChannelResponse> responses = allChannels.stream()
+        List<ChannelResponse> responses = channelService.getChannelsByServer(serverId)
+                .stream()
                 .filter(channel -> serverAuth.canViewChannel(channel.getId(), username))
                 .map(ChannelResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(responses);
     }
 
-    // 3. Lấy chi tiết 1 channel (Check quyền xem luôn cho chắc)
     @GetMapping("/channels/{channelId}")
     @PreAuthorize("@serverAuth.canViewChannel(#channelId, authentication.name)")
     public ResponseEntity<ChannelResponse> getChannelDetail(@PathVariable Long channelId) {
-        Channel channel = channelService.getChannelById(channelId);
-        return ResponseEntity.ok(ChannelResponse.from(channel));
+        return ResponseEntity.ok(ChannelResponse.from(channelService.getChannelById(channelId)));
     }
 
-    // 4. Update Channel
     @PatchMapping("/channels/{channelId}")
     @PreAuthorize("@serverAuth.canEditChannel(#channelId, authentication.name)")
     public ResponseEntity<ChannelResponse> updateChannel(
             @PathVariable Long channelId,
-            @RequestBody ChannelRequest request) {
+            @RequestBody @Valid ChannelRequest request) {
 
-        Channel updated = channelService.updateChannel(
+        request.normalize();
+        ChannelResponse updated = ChannelResponse.from(channelService.updateChannel(
                 channelId,
                 request.getName(),
                 request.getCategoryId()
-        );
-        return ResponseEntity.ok(ChannelResponse.from(updated));
+        ));
+        return ResponseEntity.ok(updated);
     }
 
-    // 5. Delete Channel
     @DeleteMapping("/channels/{channelId}")
     @PreAuthorize("@serverAuth.canEditChannel(#channelId, authentication.name)")
-    public ResponseEntity<?> deleteChannel(@PathVariable Long channelId) {
+    public ResponseEntity<Void> deleteChannel(@PathVariable Long channelId) {
         channelService.deleteChannel(channelId);
         return ResponseEntity.noContent().build();
+    }
+
+    @PutMapping("/channels/{channelId}/permissions")
+    @PreAuthorize("@serverAuth.canEditChannel(#channelId, authentication.name)")
+    public ResponseEntity<ChannelResponse> updateChannelPermissions(
+            @PathVariable Long channelId,
+            @RequestBody ChannelPermissionRequest request) {
+        return ResponseEntity.ok().build();
     }
 }
